tests/warn/if-else-inline-align.jo
def main =
  val x = if 1 >= 3 then "A"
            else if 1 >= 2 then "B"   // error
            else "C"
  println x
